# orchestratore

./: .gitignore  CLAUDE.md  pyproject.toml
config/: binari.yaml  fiscal.yaml  regime.yaml
docs/: ADR-036-orchestratore-due-binari.md  ADR-037-wiring-regime-layer-capitale.md  gridbtc-highvol-analysis-m2.md  m2-checkpoint-entrypoints-review-integrativo.md  m2-checkpoint2-review-integrativo.md  m2-checkpoint2-wiring-demo-report.md  m2-deploy-report-2026-07-07.md  m2-deploy-runbook.md  m2-gate-21-07-istruttoria.md  m2-history-collector-deploy-report-2026-07-07.md  m2-history-collector-runbook.md  m2-reactivation-gates.md  m2-runbook-operativo-andrea.md  m2-shadow-dashboard-rendering-report-2026-07-07.md  m2-shadow-dashboard-vol-reconstruction-report-2026-07-07.md  m2-shadow-dashboard-vol-schema-prep-report-2026-07-07.md  m2-shadow-network-resilience-finding-2026-07-09.md  nota-ancoraggio-soglie-vol-regime-2026-07.md  regime-threshold-provenance-2026-07.md  runbook-riattivazione-harvester.md
scripts/: demo_wiring_checkpoint2.py  derive_vol_thresholds.py  render_shadow_dashboard.py  smoke_test_entrypoints.py
src/alerting/: sinks.py
src/components/: __init__.py  history_collector.py  regime_daemon.py  regime_wiring.py  wiring_loop.py  wiring_sequencer.py
src/dashboard/: export.py  queries.py  render.py  sanity.py  vol_reconstruction.py
src/forecasts/: schema.py  scorer.py  store.py
src/regime/: config.py  funding_state.py  hysteresis.py  store.py  threshold_derivation.py  vol_state.py
src/report/: inventory.py  monthly_forecast_report.py  regime_report.py  weekly_report.py
src/risk/: constraints.py
tests/: test_fiscal_reuse.py  test_packages_importable.py
tests/alerting/: test_sinks.py
tests/components/: test_history_collector.py  test_regime_daemon.py  test_regime_wiring.py  test_wiring_loop.py  test_wiring_sequencer.py
(+23 files in other folders)
