[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestratore ADR-036: edge strutturali (Binario A) + predittore in shadow mode (Binario B)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyyaml>=6.0",
    "pyarrow>=16.0",
    "ccxt>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "D:/Claude/quantpedia-validation/src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
